@@ -3073,7 +3073,7 @@
     <builtin_function name="for">
       <_title>For...Do</_title>
       <_names>r:for</_names>
-      <example>$name(1, x, x &lt; 10, x + 1, 2, y * x, y) = 72 576</example>
+      <example>$name(1, x, x &lt; 10, x + 1, 2, y * x, y) = 725 760</example>
       <argument index="1">
         <_title>Initial value of counter</_title>
       </argument>
